src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Billed__c * Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bill (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CustomerRef__c</fullName>
        <formula>Opportunity__r.QB_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerRef</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delays_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delays__c</fullName>
        <label>Delays</label>
        <picklist>
            <picklistValues>
                <fullName>1 week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 weeks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Excpected_Billing_Date__c</fullName>
        <label>Expected Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <formula>IF(Opportunity__r.Amount  =  0 , 0 ,Fee__c  /  Opportunity__r.Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_String__c</fullName>
        <formula>TEXT( YEAR(Excpected_Billing_Date__c) ) &amp; &apos; - &apos; &amp; CASE(MONTH(  Excpected_Billing_Date__c  ) ,
	1, &apos;01&apos;,
	2, &apos;02&apos;,
	3, &apos;03&apos;,
	4, &apos;04&apos;,
	5, &apos;05&apos;,
	6, &apos;06&apos;,
	7, &apos;07&apos;,
	8, &apos;08&apos;,
	9, &apos;09&apos;,
	10, &apos;10&apos;,
	11, &apos;11&apos;,
	12, &apos;12&apos;,
        &apos;&apos;)</formula>
        <label>Month String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Expected_Billing_Amount__c</fullName>
        <formula>Fee__c - (Billed__c *  Fee__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Expected Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date_Change_Track__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opp Close Date Change Track</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <formula>IF(  ISNUMBER(Time_Frame__c), Opportunity__r.CloseDate +  (VALUE(Time_Frame__c)*7), Opportunity__r.CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <label>Time Frame (Weeks)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <label>Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bill_Percentage_check</fullName>
        <active>true</active>
        <errorConditionFormula>Bill__c+Billed__c&gt;1</errorConditionFormula>
        <errorDisplayField>Bill__c</errorDisplayField>
        <errorMessage>Invalid Bill (%). Please provide Bill (%) according to Billed amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Frame_Numeric_Check</fullName>
        <active>true</active>
        <description>Time frame must only accept numeric values except for Invoice record having Retainer stage.</description>
        <errorConditionFormula>Name  != &apos;Retainer&apos; &amp;&amp;  NOT(ISNUMBER(Time_Frame__c)) &amp;&amp; Time_Frame__c &lt;&gt; null</errorConditionFormula>
        <errorDisplayField>Time_Frame__c</errorDisplayField>
        <errorMessage>Time frame should be a number.</errorMessage>
    </validationRules>
</CustomObject>